src/vue3gui/style/util.scss
.reset {
    color: inherit;
    background: none;
    font: inherit;
    border: none;
    text-decoration: none;
}

.contain {
    contain: strict;
}

.scroll {
    overflow-y: scroll;
}

.overflow-auto {
    overflow: auto;
}

.overflow-hidden {
    overflow: hidden;
}

.small {
    font-size: small;
}

.muted {
    opacity: 0.5;
}

.passthrough {
    display: contents;
}

.shadow {
    box-shadow: 0 0 10px grey;
}

.rounded {
    border-radius: 4px;
}

.circle {
    border-radius: 100%;
}

.monospace {
    font-family: monospace;
}

.user-select-none {
    user-select: none;
}

.nowrap {
    white-space: nowrap;
}

.pre {
    white-space: pre;
}

.pre-wrap {
    white-space: pre-wrap;
    overflow-wrap: anywhere;
}

.pre-line {
    white-space: pre-line;
}

.no-resize {
    resize: none;
}

@each $type in cover, contain, scale-down {
    .img-#{$type} {
        object-fit: $type;
    }
}

.hover-check {
    .if-hover-fade, .if-not-hover-fade {
        transition: opacity 0.1s ease-in-out;
    }

    &:not(:hover, .hover-check-force) {
        .if-hover {
            display: none;
        }

        .if-hover-visible {
            visibility: hidden;
        }

        .if-hover-fade {
            opacity: 0;
        }
    }

    &:hover, &.hover-check-force {
        .if-not-hover {
            display: none;
        }

        .if-not-hover-visible {
            visibility: hidden;
        }

        .if-not-hover-fade {
            opacity: 0;
        }
    }
}

.ignored {
    pointer-events: none;
}

.stop-ignored {
    pointer-events: initial;
}

.invisible {
    visibility: hidden;
}

.opacity-0 {
    opacity: 0;
}

.pixelated {
    image-rendering: pixelated;
}

.overflow-ellipsis {
    text-overflow: ellipsis;
    overflow: hidden;
}

